# coderabbit

./: .env.example  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 1db4860d779d_initial_migration_all_tables.py
examples/: employees_endpoint_example.py
scripts/: init_cache.py  setup_cache.sh  test_employees_endpoint.sh
src/: celery_app.py  main.py
src/api/v1/: activities.py  admin.py  auth.py  notion.py  persons.py
src/clients/: notion_client.py
src/core/: config.py  dependencies.py  security.py
src/db/: sync_database.py
src/models/: activity.py  auth.py  notion.py  person.py
src/notion_fetching/: fetch_all_member_tasks.py  fetch_kanban_data.py  fetch_kozteam_database.py  fetch_projects_data.py  find_kanban.py  find_kanban_database.py  find_projects_database.py  sync_activities.py  sync_users.py
src/repositories/: activity_repository.py  auth_repository.py  cache_repository.py  person_repository.py
src/schemas/: notion_cache.py  person.py  user.py
src/services/: activity_stats_service.py  activity_sync_service.py  auth_service.py  cached_notion_service.py  notion_service.py  person_service.py
src/tasks/: notion_cache_tasks.py
